# QtQQ_Server

./: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  QQServer.cc  QQServer.h  def_eventHandler.cpp  def_eventHandler.h  def_eventType.h  def_events.cpp  def_events.h  iEvent.h  iEventHandler.h  main.cc  sqlconnection.cpp  sqlconnection.h
dao/: MessageDao.hpp  UserDao.hpp  UserGroupDao.hpp
entity/: Friendship.hpp  FriendshipDTO.hpp  Group.hpp  GroupDTO.hpp  Message.hpp  User.hpp  UserGroup.hpp
